--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001
-                <p>Texto Artigo 001</h2>
+            <h2>Curso de HTML5 com CSS3 <h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse iure exercitationem dolore eum odio laboriosam ducimus et? Expedita reiciendis eius, eum repellat quod cumque esse, asperiores dicta tempora nemo quibusdam?</h2>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, unde minima dolores ea voluptatibus inventore, quasi sint natus quidem temporibus expedita recusandae consequatur sit non, numquam dolorum officiis voluptatem totam?</p>
         </article>
 
     </main>
